[gd_scene load_steps=3 format=3 uid="uid://bokko73gbwgfe"]

[ext_resource type="Script" uid="uid://bn8vydydtytpy" path="res://UI/gameoverscreen.gd" id="1_xwpb3"]
[ext_resource type="Theme" uid="uid://b4ojxa28nkfgw" path="res://UI/shopmenu_theme.tres" id="2_8flha"]

[node name="GameOverMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwpb3")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("2_8flha")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_8flha")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8flha")
text = "Game Over!
Thanks for Playing."
horizontal_alignment = 1

[node name="ReplayButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8flha")
theme_type_variation = &"SellItemsButton"
text = "Replay"

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
